<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <DUT Name="E_PIEZO_ERROR" Id="{4921bf0b-46a2-4adb-9997-96612de65a31}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_PIEZO_ERROR :
(
	OK					:= 0,
	HW_NOT_OP,			
	ON_FAILURE,
	MAXON,
	OUT_OF_RANGE,
	USER2BIT_ZERO,
	
	// Simulator errors
	NOT_INITIALISED		:= 90,
	ZERO_POINTER		:= 100	
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>